fix: hide project scrollbar on small devices

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -3,8 +3,6 @@
 .app .project-section.active {
   width: 100%;
   margin-top: 0px;
-
-  /* uncomment to have a scroll */
   overflow-y: scroll;
   max-height: 100vh;
   /* margin-bottom: 100px; */
@@ -19,10 +17,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-
-  /* uncomment if you have a scroll */
-  /* padding: 20px 20px 20px 0px; */
-  padding: 20px 0px 20px 0px;
+  padding: 20px 20px 20px 0px;
 }
 
 .projects .project-card img {
@@ -120,6 +115,11 @@
 
   .project-card .project__links {
     margin: 10px 0px;
+  }
+
+  /* hide scroll */
+  .app .project-section.active::-webkit-scrollbar {
+    width: 0px;
   }
 }
 
